<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/dixme"
    tools:context=".disxa_menu">

    <Button
        android:id="@+id/btn_lectura"
        android:layout_width="297dp"
        android:layout_height="83dp"
        android:backgroundTint="#DFEA9C"
        android:onClick="lectura"
        android:text="@string/btnlec"
        android:textColor="#3F8236"
        android:textSize="24sp"
        android:textStyle="bold"
        app:icon="@mipmap/lib"
        app:iconPadding="20dp"
        app:iconSize="50dp"
        app:iconTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <Button
        android:id="@+id/btn_forma"
        android:layout_width="302dp"
        android:layout_height="89dp"
        android:backgroundTint="#FCE199"
        android:onClick="forma"
        android:text="@string/btnforma"
        android:textAlignment="center"
        android:textColor="#D48022"
        android:textSize="24sp"
        android:textStyle="bold"
        app:icon="@mipmap/cubos"
        app:iconPadding="20dp"
        app:iconSize="50dp"
        app:iconTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_lectura"
        app:layout_constraintVertical_bias="0.031" />

    <Button
        android:id="@+id/btn_asocia"
        android:layout_width="300dp"
        android:layout_height="85dp"
        android:backgroundTint="#E3CBEE"
        android:onClick="aso"
        android:text="@string/btnasocia"
        android:textColor="#7E49A4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:icon="@mipmap/lupa"
        app:iconPadding="20dp"
        app:iconSize="50dp"
        app:iconTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_forma"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_reto"
        android:layout_width="303dp"
        android:layout_height="90dp"
        android:backgroundTint="#FBB8AA"
        android:onClick="reto"
        android:text="@string/btnreto"
        android:textColor="#D04E47"
        android:textSize="24sp"
        android:textStyle="bold"
        app:icon="@mipmap/trofeo"
        app:iconPadding="20dp"
        app:iconSize="60dp"
        app:iconTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_asocia"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_personalizacion"
        android:layout_width="311dp"
        android:layout_height="87dp"
        android:backgroundTint="#9FC4E5"
        android:onClick="per"
        android:text="@string/Perzo"
        android:textAlignment="textEnd"
        android:textColor="#254E82"
        android:textSize="24sp"
        android:textStyle="bold"
        app:icon="@mipmap/configuraciones"
        app:iconPadding="20dp"
        app:iconSize="50dp"
        app:iconTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reto"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>